# ABTD-RPOS

./: CMakeLists.txt  README.md
docs/: RPOS_state.wsd
src/: main.cpp  pid.cpp
src/ABTD/RPOS/: EKF.py  MPC_Euler.py
src/ABTD/RPOS/MPC_Euler/: cpg_solver.py  setup.py
src/ABTD/RPOS/MPC_Euler/c/: CMakeLists.txt
src/ABTD/RPOS/MPC_Euler/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
src/ABTD/RPOS/MPC_Euler/cpp/include/: cpg_module.hpp
src/ABTD/RPOS/MPC_Euler/cpp/src/: cpg_module.cpp
src/ABTD/RPOS/Thruster_Selection/: cpg_solver.py
src/ABTD/RPOS/Thruster_Selection/c/: CMakeLists.txt
src/ABTD/RPOS/Thruster_Selection/c/src/: cpg_workspace.c
src/ABTD/actuator_gains/: pid.cpp  pid.py  test_board.py
src/ABTD/state_management/: states.cpp  telemetry.cpp
src/IOD1/RPOS/: MPC_RK4.py  MPC_test.py
src/IOD1/RPOS_IOD/: MPC_Euler.py  MPC_RK4.py
src/ORB_INSERTION/: ORB_TRAN.py  README.md  cvxgen_ORB_TRAN.py  get_impulse.pyx
src/ORB_INSERTION/cython/: README.md  get_impulse.c  get_impulse.pyx  setup.py  test.py
src/actuator_gains/: pid.cpp
src/air_table_demo/: MPC_RK4.py  thruster_selection.py
src/air_table_demo/MPC_Euler/: README.html  problem.pickle
src/air_table_demo/MPC_Euler/c/include/: cpg_solve.h  cpg_workspace.h
src/air_table_demo/Thruster_Selection/: README.html  problem.pickle  setup.py
src/air_table_demo/Thruster_Selection/c/include/: cpg_solve.h  cpg_workspace.h
src/air_table_demo/Thruster_Selection/c/src/: cpg_example.c  cpg_solve.c
src/air_table_demo/Thruster_Selection/cpp/include/: cpg_module.hpp
(+1 files in other folders)
